# scan-n-crop

./: .gitignore  README.md  pyproject.toml  requirements.txt
old_files/: cv2_test.py  opencv_tests.ipynb  pipeline.py  pipline.ipynb  refactor_scratch.py  scikit-image-canny.py  scratch.py
scan_n_crop/: app.py  main.py  opencv_tests.ipynb  pipeline.py  pipline.ipynb
scan_n_crop/cropper/: __init__.py  cropper.py  scan_cropper_debug.ipynb  scan_croppers.py  scratch.ipynb
scan_n_crop/old_files/: cv2_test.py  pipline.ipynb  scikit-image-canny.py  scratch.py
scan_n_crop/processor/: processor.py
scan_n_crop/refactor/img_cropper/: __init__.py  cropping_strategies.py  img_cropper.py
tests/: test_scan_n_crop.py
