[tool.poetry]
name = "scan-n-crop"
version = "0.1.0"
description = "scan photos in and auto-crop white space around photos"
authors = ["Connor Sahleen <Connor.Sahleen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.23.1"
matplotlib = "^3.5.2"
rich = "^12.5.1"
typer = "^0.6.1"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
